# gcode_fingerprinting

./: .cleanup_keep_runs.txt  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.inference  README.md  SWEEP_COMMANDS.txt  check_checkpoint.py  compare_experiments.py  docker-compose.yml  extract_wandb_metrics.py  find_specific_runs.py  flask_dashboard.py  flask_dashboard.py.old.bak  generate_publication_figures.py  list_wandb_projects.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run_analysis_commands.sh  setup.py  test_model_discovery.py  view_training_results.py  visualize_training_results.py
arduino/: arduino_bitpacked_sensor_logger.ino
configs/: phase1_focal_loss.json  phase1_rank1.json  phase1_rank2.json  phase1_rank3.json  phase1_rank4.json  phase1_rank5.json  phase1_strong_weights.json  sensor_multihead.json  sensor_token_lambda_sweep.yaml  sweep_1digit_20251129.yaml  sweep_4digit_20251130.yaml  sweep_4digit_20251201.yaml  sweep_architecture_ablation.yaml  sweep_best_3digit.json  sweep_best_iiv4luz5.json  sweep_comprehensive.yaml  sweep_fast_validation.yaml  sweep_grammar_constraints.yaml  sweep_longer_epochs.yaml  ultimate_model.json
data/: adaptive150025_001_aligned.csv  adaptive150025_002_aligned.csv  adaptive150025_003_aligned.csv  adaptive150025_004_aligned.csv  adaptive150025_005_aligned.csv  adaptive150025_006_aligned.csv  adaptive150025_007_aligned.csv  adaptive150025_008_aligned.csv  adaptive150025_009_aligned.csv  adaptive150025_010_aligned.csv  adaptive150025_011_aligned.csv  adaptive150025_012_aligned.csv  adaptive150025_013_aligned.csv  adaptive150025_014_aligned.csv  adaptive150025_015_aligned.csv  adaptive150025_016_aligned.csv  adaptive150025_017_aligned.csv  (+125 more)
(+465 files in other folders)
