[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcode-fingerprinting"
version = "0.1.0"
description = "G-code fingerprinting and MCC DAQ tools"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [ { name = "Your Name", email = "you@example.com" } ]
keywords = ["gcode", "ml", "mcc", "daq", "milling"]

# Runtime dependencies
dependencies = [
  # Core ML/Data Science
  "numpy>=1.21",
  "pandas>=1.3",
  "scikit-learn>=1.3.0",
  "scipy>=1.7",

  # Deep Learning
  "torch>=1.12",
  "torchvision>=0.13",

  # Visualization
  "matplotlib>=3.4",
  "seaborn>=0.11",
  "plotly>=5.17.0",

  # Web Framework
  "Flask>=2.0",
  "flask-socketio>=5.3.0",
  "python-socketio>=5.9.0",
  "redis>=5.0.0",

  # Statistical Analysis
  "statsmodels>=0.13",

  # Hardware/Communication
  "pyzmq>=23.0",
  "uldaq==1.2.3",
  "pyserial>=3.5",

  # Utilities
  "Pillow>=8.0",
  "tqdm>=4.62.0",
]

[project.optional-dependencies]
# Development tools
dev = [
  "black>=23.1",
  "ruff>=0.5.0",
  "pytest>=7.0",
  "mypy>=0.971",
]

# ML experiment tracking and visualization
ml = [
  "wandb>=0.15.0",
  "tensorboard>=2.10",
]

# Interactive dashboards
dashboard = [
  "streamlit>=1.28.0",
]

# All optional dependencies
all = [
  "wandb>=0.15.0",
  "tensorboard>=2.10",
  "streamlit>=1.28.0",
]

[project.scripts]
# Console entry to launch the MCC helper (calls main() in the module)
launch-mcc-helper = "miracle.utilities.mcc_helper:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["miracle*"]
